# cpp-convnet

./: .gitignore  CMakeLists.txt  README.md
scripts/: convert_to_ternary.py  run_benchmarks.py
src/: benchmark_model.cpp  model.cpp  model.hpp  ops_avx2.cpp  ops_avx2.hpp  ops_avx512.cpp  ops_avx512.hpp  ops_neon.cpp  ops_neon.hpp
